# shadowcopy

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  repo-setup.py
.github/workflows/: test_and_release.yml
docs/: exceptions.html  index.html  shadow.html
shadowcopy/: __init__.py  exceptions.py  shadow.py
tests/: test_shadowcopy.py
